edited ui redirects

--- a/src/main/resources/templates/edit-player.handlebars
+++ b/src/main/resources/templates/edit-player.handlebars
@@ -10,7 +10,7 @@
 
                 <div class="card" style="width: 40rem;">
                     <div class="card-header">
-                        Updating {{firstName}} {{lastName}} details:
+                        <h3>Update {{firstName}} {{lastName}} details:</h3>
                     </div>
                     <div class="card-body">
                         <form method="post" action="/edit/{{id}}">
