--- a/src/main/resources/templates/players.handlebars
+++ b/src/main/resources/templates/players.handlebars
@@ -5,8 +5,9 @@
             <div class="col-sm">
                 <div class="card" style="width:100%;">
                     <div class="card-header row justify-content-between">
-                        <div class="">
-                            Players information & Statistics
+
+                        <div class="ml-3 mt-3 mb-3">
+                            <h3>Players information & Statistics</h3>
                         </div>
                         <a href="/select">
                             <button type="button" class="btn btn-warning  right mr-3">Select Starting LineUp</button>
