--- a/src/main/resources/templates/register.handlebars
+++ b/src/main/resources/templates/register.handlebars
@@ -8,7 +8,7 @@
 
        <div class="card" style="width: 40rem;">
                <div class="card-header">
-                 Add New Player
+                 <h3>Add New Player</h3>
                </div>
                <div class="card-body">
                  <form method="post" action="/add">
@@ -58,7 +58,7 @@
                     </div>
                  </div>
 
-                 <div><button type="submit" class="btn btn-primary" style="float: right;">Add new</button></div>
+                 <div><button type="submit" class="btn btn-primary" style="float: right;">Add Player</button></div>
 
                  </form>
                </div>
