--- a/src/main/resources/templates/header.handlebars
+++ b/src/main/resources/templates/header.handlebars
@@ -37,17 +37,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/dashboard">Club Panel <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Club Dashboard <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/staff">Club Personnel</a>
-                </li>
-                <li class="nav-item">
-
+                    <a class="nav-link" href="/staff">Personnel</a>
                 </li>
             </ul>
-
         </div>
     </nav>
 </header>
