--- a/src/main/resources/templates/gallery.handlebars
+++ b/src/main/resources/templates/gallery.handlebars
@@ -3,4 +3,16 @@
     <div class="image-box float-left">
         <img src="/images/soccer-stadium-1.jpg" class="img-fluid" alt="...">
     </div>
+    <div class="image-box float-left">
+        <img src="/images/carousel-3.jpg" class="img-fluid" alt="...">
+    </div>
+    <div class="image-box float-left">
+        <img src="/images/carousel-2.jpg" class="img-fluid" alt="...">
+    </div>
+    <div class="image-box float-left">
+        <img src="/images/carousel-1.jpg" class="img-fluid" alt="...">
+    </div>
+    <div class="image-box float-left">
+        <img src="/images/calendar.jpg" class="img-fluid" alt="...">
+    </div>
 </main>
