--- a/src/main/resources/templates/selected.handlebars
+++ b/src/main/resources/templates/selected.handlebars
@@ -6,10 +6,10 @@
                 <div class="card" style="width:100%;">
                     <div class="card-header row justify-content-between">
                         <div class="">
-                            Players information & Statistics
+                            <h2>Selected Team</h2>
                         </div>
                         <a href="/select">
-                            <button type="button" class="btn btn-warning  right mr-3">Select Starting LineUp</button>
+                            <button type="button" class="btn btn-warning  right mr-3">Submit & Notify Players</button>
                         </a>
                     </div>
                     <div class="card-body">
@@ -68,7 +68,5 @@
 </div>
 
 <main role="main">
-    <div class="container my-4">
-        <h2>Selected Team</h2>
-    </div>
+
 </main>
