updating player records

--- a/src/main/resources/templates/edit-player.handlebars
+++ b/src/main/resources/templates/edit-player.handlebars
@@ -80,6 +80,18 @@
                                 </div>
                             </div> <br>
 
+                            <div class="row">
+                                <div class="col">
+                                    <label for="weight">Assists</label>
+                                    <input type="text" class="form-control" name="assists" value="{{assists}}">
+                                </div>
+
+                                <div class="col">
+                                    <label for="age">Clean Sheets</label>
+                                    <input type="text" class="form-control" name="cleanSheets" value="{{cleanSheets}}">
+                                </div>
+                            </div> <br>
+
                             <button type="submit" class="btn btn-primary mr-3">Update</button>
                             <a href="/delete/{{id}}" type="button" class="btn btn-danger">delete</a>
 
