--- a/src/main/resources/templates/selected.handlebars
+++ b/src/main/resources/templates/selected.handlebars
@@ -8,6 +8,9 @@
                         <div class="">
                             <h2>Selected Team</h2>
                         </div>
+                        <a href="/clear">
+                            <button type="button" class="btn btn-warning  right mr-3">Clear Selection</button>
+                        </a>
                         <a href="/select">
                             <button type="button" class="btn btn-warning  right mr-3">Submit & Notify Players</button>
                         </a>
