updating player records

--- a/src/main/resources/templates/selected.handlebars
+++ b/src/main/resources/templates/selected.handlebars
@@ -24,14 +24,14 @@
                                         <th scope="col">Position</th>
                                         <th scope="col">Name</th>
                                         <th scope="col">Surname</th>
-                                        <th scope="col">Age</th>
-                                        <th scope="col">Height(m)</th>
-                                        <th scope="col">Weight(kg)</th>
-                                        <th scope="col">Yellow</th>
-                                        <th scope="col">Red</th>
-                                        <th scope="col">Goals</th>
-                                        <th scope="col">Assists</th>
-                                        <th scope="col">Clean Sheets</th>
+<!--                                        <th scope="col">Age</th>-->
+<!--                                        <th scope="col">Height(m)</th>-->
+<!--                                        <th scope="col">Weight(kg)</th>-->
+<!--                                        <th scope="col">Yellow</th>-->
+<!--                                        <th scope="col">Red</th>-->
+<!--                                        <th scope="col">Goals</th>-->
+<!--                                        <th scope="col">Assists</th>-->
+<!--                                        <th scope="col">Clean Sheets</th>-->
                                         <th scope="col">Edit</th>
                                     </tr>
                                     </thead>
@@ -41,17 +41,17 @@
                                             <td>{{fieldPosition}}</td>
                                             <td>{{firstName}}</td>
                                             <td>{{lastName}}</td>
-                                            <td>{{age}}</td>
-                                            <td>{{height}}</td>
-                                            <td>{{weight}}</td>
-                                            <td>{{yellowCards}}</td>
-                                            <td>{{redCards}}</td>
-                                            <td>{{goals}}</td>
-                                            <td>{{assists}}</td>
-                                            <td>{{cleanSheets}}</td>
+<!--                                            <td>{{age}}</td>-->
+<!--                                            <td>{{height}}</td>-->
+<!--                                            <td>{{weight}}</td>-->
+<!--                                            <td>{{yellowCards}}</td>-->
+<!--                                            <td>{{redCards}}</td>-->
+<!--                                            <td>{{goals}}</td>-->
+<!--                                            <td>{{assists}}</td>-->
+<!--                                            <td>{{cleanSheets}}</td>-->
                                             <td>
                                                 <a href="/edit/{{id}}" type="button"
-                                                   class="btn btn-primary mr-3">Update</a>
+                                                   class="btn btn-primary mr-3">remove</a>
                                                 <!--                                                <button type="button" class="btn btn-danger">delete</button>-->
                                             </td>
                                         </tr>
